Fixed rendering bug on cards, added key to each card, removed align-item CSS to resolve styling alignment error.

--- a/example-store-front-end/src/components/Card/Card.module.css
+++ b/example-store-front-end/src/components/Card/Card.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     justify-content: left;
-    align-items: left;
+    /* align-items: left; */
     flex-wrap: wrap;
     width: 20%;
     flex: 28%;
